--- a/Suman Karmakar/index.html
+++ b/Suman Karmakar/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <div class="logo">Suman</div>
+      <div class="logo">Suman Karmakar</div>
       <nav>
         <a href="#home">Home</a>
         <a href="#services">Practice Areas</a>
